AM_FFLAGS = -ffree-form

FCFLAGS = -g

lib_LTLIBRARIES = libcalc11.la

libcalc11_la_SOURCES = \
	config.h \
	difxcalc.h \
	difxio.h \
	c2poly.i \
	ccon.i \
	cmwob11.i \
	cmxsr11.i \
	cmxst11.i \
	cmxut11.i \
	cobsn11.i \
	cphys11.i \
	csolsys11.i \
	cuser11.i \
	d_input.i \
	get2s.i \
	input11.i \
	param11.i \
	put2s.i \
	difxiohelper.c \
	catiu.f \
	catmm.f \
	caxom.f \
	cctiu.f \
	cdiuu.f \
	cdtdb.f \
	cetdm.f \
	cm20u.f \
	cmabd.f \
	cmatu.f \
	cnutm.f \
	cnutu.f \
	cnutu6.f \
	cocem.f \
	cpepu.f \
	cptdm.f \
	crosu.f \
	csitm.f \
	cstrm.f \
	ctheu.f \
	cut1m.f \
	cuvm.f \
	cvecu.f \
	cwobm.f \
	ddrvr.f \
	dinit.f \
	dkill.f \
	d_out.f \
	dsitu.f \
	dscan.f \
	fitpoly_.c \
	poly.h \
	hardisp.f \
	nfmodel.f \
	nfstrm.f \
	load_source.f \
	load_ant.f \
	load_eop.f \
	set_times.f \
	runcalc.f \
	calcinit.f

# Install headers
include_HEADERS = parsevis.h \
		poly.h

